<resources>
    <string name="app_name">PC Builder</string>
    <string name="builds">Builds</string>
    <string name="settings">Settings</string>
    <string name="menu">Menu</string>
    <string name="fab">FAB</string>
    <string name="google">Google</string>
    <string name="github">GitHub</string>
    <string name="email_and_password">Email and Password</string>
    <string name="sign_in">Sign in</string>
    <string name="drawer_header_desc">Pick one of the options below.</string>
    <string name="anonymous">Anonymous</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="sign_out">Sign out</string>
    <string name="register">Register</string>
    <string name="e_mail_colon">E-mail:</string>
    <string name="password_colon">Password:</string>
    <string name="not_yet_registered">Not yet registered?</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="login">Login</string>
    <string name="already_registered">Already registered?</string>
    <string name="cpu_manufacturer">CPU Manufacturer</string>
    <string name="product_description">Product description</string>
    <string name="wattage_icon">Wattage icon</string>
    <string name="wattage_format">%1$dW</string>
    <string name="currency">HUF</string>
    <string name="price_format">%1$s %2$s</string>
    <string name="total_price_format">TOTAL PRICE: %1$s %2$s</string>
    <string name="product_search">Product search</string>
    <string name="build_name">Build Name</string>
    <string name="e_mail_address_prompt">E-mail Address</string>
    <string name="password_prompt">Password</string>
    <string name="password_again_prompt">Password again</string>
    <string name="save_build">Save Build</string>
    <string name="show_test_notification">Show test notification:</string>
    <string name="show_notification">Show notification</string>
    <string name="emoji">&#9996;</string>

    <array name="case_images">
        <item>@drawable/h500p</item>
        <item>@drawable/cm_mb520</item>
        <item>@drawable/helios_gx601</item>
        <item>@drawable/pure_base_500dx</item>
        <item>@drawable/razer_tomahawk_mini_itx</item>
    </array>

    <array name="cpu_images">
        <item>@drawable/intel_core_i5_9400f</item>
        <item>@drawable/intel_core_i5_12600kf</item>
        <item>@drawable/intel_core_i7_10700f</item>
        <item>@drawable/ryzen_5_5600x</item>
        <item>@drawable/ryzen_7_5700g</item>
    </array>

    <array name="gpu_images">
        <item>@drawable/gtx_1660_super</item>
        <item>@drawable/radeon_nitro_rx_6700_xt</item>
        <item>@drawable/rtx_3060_12gb</item>
        <item>@drawable/rx_6500_xt</item>
        <item>@drawable/rx_6600_xt_8gb</item>
    </array>

    <array name="psu_images">
        <item>@drawable/evga_supernova_650</item>
        <item>@drawable/evga_650</item>
        <item>@drawable/corsair_hx1200</item>
        <item>@drawable/cm_elite_v3_600w</item>
        <item>@drawable/silentiumpc_supremo_750w</item>
    </array>

    <array name="ram_images">
        <item>@drawable/corsair_vengeance_8gb_ddr3_1600mhz</item>
        <item>@drawable/crucial_ballistix_32gb_ddr4_3200mhz</item>
        <item>@drawable/kingston_fury_beast_16gb_ddr4_3200mhz</item>
        <item>@drawable/crucial_ballistix_16gb_ddr4_3200mhz</item>
        <item>@drawable/g_skill_aegis_16gb_ddr4_3200mhz</item>
    </array>

    <array name="motherboard_images">
        <item>@drawable/msi_mag_b460_tomahawk</item>
        <item>@drawable/asus_rog_strix_b550_f_gaming</item>
        <item>@drawable/asus_rog_strix_b450_f_gaming_ii</item>
        <item>@drawable/asus_tuf_gaming_b560m_plus</item>
        <item>@drawable/asus_tuf_gaming_b560_plus_wifi</item>
    </array>

    <array name="cooler_images">
        <item>@drawable/be_quiet_dark_rock_4</item>
        <item>@drawable/be_quiet_dark_rock_pro_4</item>
        <item>@drawable/noctua_chromax_nh_d15</item>
        <item>@drawable/noctua_nh_u12s_fan_nh_u12s</item>
        <item>@drawable/be_quiet_pure_rock_2</item>
    </array>

</resources>